项目目录调整为brand做准备

--- a/src/styles/css/common.css
+++ b/src/styles/css/common.css
@@ -1,14 +1,18 @@
+
 #test{
     height: 3000px;
     width: 100%;
     background-color: #1d5987;
 }
+
+
 /*主编辑区域**/
 body{
     background-color: #F2F4F7;
     min-width: 1000px;
     font-size: 12px;
-    font-family: "lucida grande",Helvetica,Tahoma,Verdana,Arial,Microsoft YaHei,simsun,sans-serif;
+    font-family: 'Fira Mono', Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
+    /* font-family: "lucida grande",Helvetica,Tahoma,Verdana,Arial,Microsoft YaHei,simsun,sans-serif; */
     padding-bottom: 30px;
     padding-top: 106px;
 }
