--- a/demo.css
+++ b/demo.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Fira Mono', Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
+}
 .container{
     padding-top: 50px;
     width: 1000px;
