找到原因为，用新字体，导致html中的所有element中间的间距变大

--- a/src/styles/css/common.css
+++ b/src/styles/css/common.css
@@ -11,8 +11,8 @@ body{
     background-color: #F2F4F7;
     min-width: 1000px;
     font-size: 12px;
-    font-family: 'Fira Mono', Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
-    /* font-family: "lucida grande",Helvetica,Tahoma,Verdana,Arial,Microsoft YaHei,simsun,sans-serif; */
+    /* font-family: 'Fira Mono', Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace; */
+    font-family: "lucida grande",Helvetica,Tahoma,Verdana,Arial,Microsoft YaHei,simsun,sans-serif; 
     padding-bottom: 30px;
     padding-top: 106px;
 }
