测试for时使用vue校验，结果表明与angular一样不能进行动态name校验

--- a/src/styles/css/common.css
+++ b/src/styles/css/common.css
@@ -271,7 +271,11 @@ ul{
     border:1px solid #EFEFEF;
     border-radius:3px;
     background-color:#FFF;
-    overflow: hidden;
+}
+.table_layout:after{
+    clear: both;
+    display: table;
+    content: '';
 }
 .table_layout table{
     border-top:1px solid #DDD;
